# multi-knn

./: CMakeLists.txt  README.md
src/: csv.c  csv.h  dataset.c  dataset.h  knn.c  knn.h  list.h  main.c  util.c  util.h
